--- a/src/templates/screens/admin/GlobalArtifactTypeShow.vm
+++ b/src/templates/screens/admin/GlobalArtifactTypeShow.vm
@@ -49,8 +49,12 @@
 #foreach ($issueType in $nondeletedIssueTypes)
     #set ($group = $intake.IssueType.mapTo($issueType))
 #indexedRows($velocityCount)
+
 <td><input type="checkbox" name="action_$issueType.IssueTypeId" /></td>
 <td><a href="$link.setPage("admin,GlobalArtifactTypeEdit.vm").setPathInfo("issuetypeid", "$issueType.IssueTypeId")">$issueType.Name</a>
+#if($issueType.SystemDefined)
+  &#160;($l10n.SystemSpecified)
+#end
 </td>
 <td>#booleanCheckbox($group.Locked)</td>
 <td>#booleanCheckbox($group.Isdefault)</td>
