--- a/src/templates/screens/admin/GlobalAttributeGroupEdit.vm
+++ b/src/templates/screens/admin/GlobalAttributeGroupEdit.vm
@@ -2,7 +2,10 @@
 #set ($group = $scarabR.getAttributeGroup($groupId))
 #set ($issueTypeId = $data.Parameters.getString("issueTypeId"))
 #set ($issueType = $scarabR.IssueType)
-
+#set ($immutable = $issueType.SystemDefined)
+#if($immutable)
+<p class="infomark"><strong>$l10n.SystemSpecifiedIssueType</strong></p>
+#end
 <div class="app" id="div2-1-4-0">
 
 #if (!$groupId)
@@ -18,7 +21,9 @@
 <input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="admin,GlobalArtifactTypeEdit.vm" />
 
 <div class="functnbar">
+#if(!$immutable)
 <input type="submit" value="$l10n.Done"  name="eventSubmit_doDone" />
+#end
 <input type="submit" value="$l10n.Cancel"  name="eventSubmit_doCancel" />
 </div>
 
@@ -39,10 +44,11 @@
  </tr>
  </table>
 </div>
-
+#if(!$immutable)
 <div class="functnbar3">
 <input type="submit" value="$l10n.Save" name="eventSubmit_doSaveinfo" />&#160;
 </div>
+#end
 
 <h3>$l10n.AttributesInGroup</h3>
 #if (!$group.Attributes.isEmpty())
@@ -96,7 +102,7 @@
 #else
   <p><em>$l10n.ClickAddButton</em></p>
 #end
-
+#if (!$immutable)
 <div class="functnbar3">
 #if (!$group.Attributes.isEmpty())
 <input type="submit" value="$l10n.Save" name="eventSubmit_doSaveglobal" />&#160;
@@ -108,10 +114,12 @@
 ##<input type="submit" value="$l10n.Resort" name="eventSubmit_doSaveglobal" />
 #end
 </div>
-
+#end
 
 <div class="functnbar2">
+#if (!$immutable)
 <input type="submit" value="$l10n.Done"  name="eventSubmit_doDone" />
+#end
 <input type="submit" value="$l10n.Cancel"  name="eventSubmit_doCancel" />
 </div>
 
