Stubbed out UI controls for export to XML using the standard data export widgets.

--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -502,6 +502,7 @@ $scarabR.IssuePosInList of $scarabR.CurrentSearchResultsSize
 <option value="" selected="selected">$l10n.ExportResultsTo</option>
 <option value="excel">$l10n.Excel</option>
 <option value="tsv">$l10n.TabSeparatedValues</option>
+##<option value="xml">XML</option>
 </select>
 <noscript>
 <input type="submit" name="$action" value="$l10n.Go" />
@@ -525,6 +526,8 @@ selected the radio button.
  <input type="radio" name="$paramName" value="tsv"
  #if ($format.equalsIgnoreCase('tsv'))checked="checked"#end
  />$l10n.TabSeparatedValues
+ #* <input type="radio" name="$paramName" value="xml"
+ #if ($format.equalsIgnoreCase('xml'))checked="checked"#end />XML *#
 </td>
 </tr>
 #end
