Improve the interface between the DTD string recognized as a classpath resource and the template used to export issues as XML.
* src/templates/macros/XMLExportIssuesMacro.vm
  Used new $dtdURI context variable in DOCTYPE decl to avoid
  hard-coding.

* src/java/org/tigris/scarab/screens/admin/ViewXMLExportIssues.java
  doBuildTemplate(): Added $dtdURI to context.

Issue: PCN21012

--- a/src/templates/macros/XMLExportIssuesMacro.vm
+++ b/src/templates/macros/XMLExportIssuesMacro.vm
@@ -41,8 +41,7 @@
 #end
 #set ($module = $scarabR.CurrentModule)
 <?xml version="1.0" standalone="no"?>
-## URI must match org.tigris.scarab.util.xmlissues.ImportIssues.SYSTEM_DTD_URI
-<!DOCTYPE scarab-issues SYSTEM "http://scarab.tigris.org/dtd/scarab-0.16.28.dtd">
+<!DOCTYPE scarab-issues SYSTEM "$dtdURI">
 <scarab-issues>
   <import-type>create-different-db</import-type>
   <module>
