Issue number: 20904 - Fatal error while creating Query - No artifact types in project Modified file: * AdvancedQuery.vm: before rendering page, check that there is either cross module/issuetype list selected, or that the current issue type (the default) exists. otherwise display message.
Submitted by: elicia
Reviewed by: jmcnally

--- a/src/templates/screens/AdvancedQuery.vm
+++ b/src/templates/screens/AdvancedQuery.vm
@@ -1,5 +1,6 @@
 <div class="app" id="advancedquery">
 
+#if ($user.CurrentMITList || $scarabR.CurrentIssueType)
 <form action="$link.setPage("AdvancedQuery.vm")" method="post">
 <input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="IssueList.vm" />
 <input type="hidden" name="$scarabG.Constant.OTHER_TEMPLATE" value="UserList.vm" />
@@ -14,4 +15,7 @@
 $intake.declareGroups()
 </form>
 
+#else
+<p><em>$l10n.NoIssueTypesInModule</em></p>
+#end
 </div>
