Issue number: 20714 - Some Invalid string gets displayed while viewing an moved artifact  Modified files:  * src/java/org/tigris/scarab/om/IssueManager.java - putInstanceImpl:    an active flag was added to the method, so remove all cached results  * src/templates/viewIssue/ViewIssueTab1.vm - small efficiency improvement since    we already have reference to the RModuleAttribute.

--- a/src/templates/viewIssue/ViewIssueTab1.vm
+++ b/src/templates/viewIssue/ViewIssueTab1.vm
@@ -34,7 +34,7 @@
             #end
             #if ($canEdit)
                  <tr>
-                  <th> #if ($attVal.isRequired())*#end 
+                  <th> #if ($rma.getRequired())*#end 
                   $rma.DisplayValue</th>
                   <td>
                 #if ($att.isOptionAttribute())
