* src/conf/Scarab.properties - added template.ViewQuery.vm.title=Title for   the new ViewQuery.vm template. * src/i18n/ScarabBundle_en_US.properties - added ViewQuery.vm.Title and   ReadOnlyViewOfQuery keys for use in the new ViewQuery.vm template * src/java/org/tigris/scarab/actions/Search.java - renamed doGotoeditquery   to doPreparequery.  The previous name went with how it was used but the   method itself has nothing to do with a particular template.  Also left in   some commented code that I want to get working, but could not track down   all the dependencies. * src/java/org/tigris/scarab/tools/ScarabRequestTool.java - getEditLink:   use the new method name in Search. * src/templates/macros/AdvancedQueryMacro.vm - advancedQuery macro: added   $includeButtons argument that can be used to suppress buttons meant for   editing the query. * src/templates/screens/AdvancedQuery.vm and * src/templates/screens/EditQuery.vm - account for advancedQuery macro   argument list change and pass true so that edit buttons are rendered. * src/templates/screens/admin/Approval.vm - show the query using the   read-only ViewQuery.vm template. Added file: * src/templates/screens/ViewQuery.vm - A read-only template suitable for   reviewing a query for approval without getting sidetracked with buttons   that are used for editing the query.
Issue number: pcn 20599
Submitted by: jmcnally@collab.net
Reviewed by: kmaples@collab.net

--- a/src/templates/macros/AdvancedQueryMacro.vm
+++ b/src/templates/macros/AdvancedQueryMacro.vm
@@ -7,7 +7,7 @@
 </div>
 #end
 
-#macro( advancedQuery )
+#macro( advancedQuery $includeButtons)
 #if (!$refine)
     #set ($refine = $data.Parameters.getString("refine", ""))
 #end
@@ -29,7 +29,7 @@
 ## we only show the edit link, if we are editing a saved query.
 ## It is easier to have the user use the back button if they are just creating
 ## a new query, otherwise we need to keep track of a lot of info. 
-#set ($showButton = ($user.CurrentMITList.isModifiable() && $queryId))
+#set ($showButton = ($user.CurrentMITList.isModifiable() && $queryId && $includeButtons))
 #showMITList($l10n.SelectedIssueTypes $user $showButton)
 
 <h3>$l10n.IssueIDQuery</h3>
@@ -133,6 +133,7 @@ $l10n.From:&#160;<input type="text" size="20"
  #end
 #end
 
+#if ($includeButtons)
 ## Add user to search list
  #indexedRows2($loopVar) 
 #if ($userList && !$userList.isEmpty())
@@ -151,7 +152,10 @@ $l10n.From:&#160;<input type="text" size="20"
     </select>
   </td>
 </tr>
+#end
 </table> 
+
+#if ($includeButtons)
 <div class="functnbar3">
 <input type="submit" value="$l10n.AddNew" name="eventSubmit_doAdduserbyusername" />&nbsp;
 #if ($userList && !$userList.isEmpty())
@@ -159,6 +163,7 @@ $l10n.From:&#160;<input type="text" size="20"
 #end
 <input type="submit" value="$l10n.EditList" name="eventSubmit_doGotoeditlist" />
 </div>
+#end
 
 ## COMMENT QUERY
 <div>
@@ -196,7 +201,9 @@ $l10n.From:&#160;<input type="text" size="20"
     #end
 #end
      </select>
+#if ($includeButtons)
      <input name="eventSubmit_doRefresh" value="$l10n.UpdateOptions" type="submit" />
+#end
  </td>
 </tr>
 <tr>
